--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,32 @@
-.bundle
-db/*.sqlite3*
-log/*.log
-*.log
-tmp/**/*
-tmp/*
-doc/api
-doc/app
-*.swp
-*.sw?
-*~
-._*
-.DS_Store
-vendor
-*.swp
 *.rbc
-*.sass-cache
-/pkg
-/doc/api
-/Gemfile.lock
+*.sassc
+.sass-cache
+capybara-*.html
+.rspec
+.rvmrc
+/.bundle/
+/vendor
+/vendor/bundle
+/log/*
+/tmp/*
+/db/*.sqlite3
+/public/system/*
+/coverage/
+/spec/tmp/*
+**.orig
+rerun.txt
+pickle-email-*.html
+.project
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+Gemfile.lock
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
