--- a/config/thin/production.yml
+++ b/config/thin/production.yml
@@ -1,10 +1,10 @@
 --- 
 user: www-data
 group: www-data
-pid: ~/app/il_dashboard/current/tmp/pids/thin.pid
+pid: /home/lmis/app/il_dashboard/current/tmp/pids/thin.pid
 timeout: 30
 wait: 30
-log: ~/app/il_dashboard/current/log/thin.log
+log: /home/lmis/app/il_dashboard/current/log/thin.log
 max_conns: 1024
 require: []
 environment: production
@@ -13,6 +13,6 @@ servers: 1
 threaded: true
 no-epoll: true
 daemonize: true
-socket: ~/app/il_dashboard/current/tmp/sockets/thin.sock
-chdir: ~/app/il_dashboard/current
+socket: /home/lmis/app/il_dashboard/current/tmp/sockets/thin.sock
+chdir: /home/lmis/app/il_dashboard/current
 tag: il_dashboard_server aux
