--- a/config/thin/production.yml
+++ b/config/thin/production.yml
@@ -1,6 +1,6 @@
 --- 
-user: lmis
-group: sudo
+#user: lmis
+#group: sudo
 pid: /home/lmis/app/il_dashboard/current/tmp/pids/thin.pid
 port: 5432
 timeout: 30
