--- a/config/thin/production.yml
+++ b/config/thin/production.yml
@@ -2,17 +2,18 @@
 user: lmis
 group: lmis 
 pid: /home/lmis/app/il_dashboard/current/tmp/pids/thin.pid
+port: 3000
+log: /home/lmis/app/il_dashboard/current/log/thin.log
 timeout: 30
 wait: 30
-log: /home/lmis/app/il_dashboard/current/log/thin.log
-max_conns: 1024
-require: []
-environment: production
-max_persistent_conns: 512
 servers: 1
-threaded: true
-no-epoll: true
-daemonize: true
-socket: /home/lmis/app/il_dashboard/current/tmp/sockets/thin.sock
-chdir: /home/lmis/app/il_dashboard/current
-tag: il_dashboard_server aux
+#max_conns: 1024
+#environment: production
+#require: []
+#max_persistent_conns: 512
+#threaded: true
+#no-epoll: true
+#daemonize: true
+#socket: /home/lmis/app/il_dashboard/current/tmp/sockets/thin.sock
+#chdir: /home/lmis/app/il_dashboard/current
+#tag: il_dashboard_server aux
